<?xml version="1.0"?>
<package format="2">
  <name>mrotor_sls_controllers</name>
  <version>0.0.1</version>
  <description>The mrotor_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zichen21@ualberta.ca">Zichen Zhang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>controller_msgs</exec_depend>
  <exec_depend>mrotor_controller</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
